improved article preview, fix spacing on non-grid sequential list

--- a/_sass/_temporary.scss
+++ b/_sass/_temporary.scss
@@ -15,7 +15,12 @@
 
 
 /* Fix overlapping excerpt text and Read More link */
+/* Fix excerpt + Read More spacing (sequential list view) */
 article {
+    /* Normalize paragraph spacing inside each article */
+    p {
+        margin: 0;
+    }
 
     .post-content {
         margin: 0 0 0.75em 0;
@@ -30,12 +35,14 @@ article {
         margin: 0;
         padding: 0;
         position: static !important;
-
-        a {
-            display: inline-block;
-            margin-top: 0.25em;
-        }
     }
+        /* No extra bottom space after Read More */
+        .actions a {
+            display: inline-block;
+            margin: 0;
+            padding: 0;
+            line-height: 1.2;
+        }
 }
 
 /* Sidebar toggle icon behavior */
